[project]
name = "redis-stack-wheel"
version = "0.1.0"
description = "Wheels that bundle precompiled redis-stack-server binaries for the appropriate platform. Currently on Redis Stack v7.2.0-v9"
license = {file = "LICENSE"}
authors = [
    {name = "Benjamin Levin", email = "bplevin36@gmail.com"},
]
readme = "README.md"
keywords = ["redis", "server"]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools >= 61.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["redis_stack_wheel"]

[tool.setuptools.package-data]
"*" = ["*"]
